--- a/css/1-1.css
+++ b/css/1-1.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
     background-image: url("../assets/Creation/background.png");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left;
     background-size: cover;
     overflow-y: hidden;
 }
@@ -48,7 +48,12 @@ p {
     width: 250px;
     cursor: pointer;
 }
-@media (max-width: 565px) {
+@media screen and (max-width: 820px) {
+    #left {
+        margin-right: 6em;
+    }
+}
+@media screen and (max-width: 565px) {
     .textContainer {
         padding: 72px 64px 0;
     }
@@ -68,5 +73,76 @@ p {
     }
     #left, #right {
         width: 180px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .textContainer {
+        padding: 40px 32px 0;
+    }
+    p {
+        font-size: 14px;
+    }
+    #upText, #middleText {
+        margin-bottom: 3px;
+    }
+    #left, #right {
+        width: 160px;
+    }
+}
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+    .textContainer {
+        padding: 80px 40px 24px;
+    }
+    p {
+        font-size: 20px;
+    }
+    #left {
+        margin-bottom: 30px;
+    }
+    #left, #right {
+        width: 200px;
+    }
+}
+@media screen and (max-height: 420px) {
+    .textContainer {
+        padding: 56px 0;
+        margin: 0;
+    }
+    p {
+        font-size: 18px;
+    }
+    #left {
+        margin-right: 8em;
+    }
+    #left, #right {
+        width: 180px;
+    }
+}
+@media screen and (max-height: 390px) {
+    .textContainer {
+        padding: 48px 0;
+    }
+    p {
+        font-size: 16px;
+    }
+    #left {
+        margin-right: 5em;
+    }
+    #left, #right {
+        width: 150px;
+    }
+}
+@media screen and (max-height: 350px) {
+    .textContainer {
+        padding: 32px 0;
+    }
+    p {
+        font-size: 16px;
+    }
+    #left {
+        margin-right: 5em;
+    }
+    #left, #right {
+        width: 140px;
     }
 }
