--- a/css/3-1.css
+++ b/css/3-1.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
     background-image: url("../assets/SoundOne/background.png");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left;
     background-size: cover;
     overflow-y: hidden;
 }
@@ -53,7 +53,12 @@ p {
     width: 250px;
     cursor: pointer;
 }
-@media (max-width: 565px) {
+@media screen and (max-width: 820px) {
+    #left {
+        margin-right: 6em;
+    }
+}
+@media screen and (max-width: 565px) {
     .textContainer {
         padding: 72px 48px 0;
         margin-bottom: 2em;
@@ -80,5 +85,67 @@ p {
     }
     #left, #right {
         width: 150px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .textContainer {
+        padding: 40px 48px 0;
+    }
+    p {
+        font-size: 14px;
+    }
+    #upText, #middleTextOne, #middleTextTwo {
+        margin-bottom: 3px;
+    }
+    #left, #right {
+        width: 130px;
+    }
+}
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+    .textContainer {
+        padding: 80px 48px 24px;
+    }
+    p {
+        font-size: 20px;
+    }
+    #left {
+        margin-bottom: 5px;
+    }
+    #left, #right {
+        width: 160px;
+    }
+}
+@media screen and (max-height: 420px) {
+    .textContainer {
+        padding: 56px 0;
+        margin: 0;
+    }
+    p {
+        font-size: 18px;
+    }
+    #left {
+        margin-right: 8em;
+    }
+    #left, #right {
+        width: 150px;
+    }
+}
+@media screen and (max-height: 390px) {
+    .textContainer {
+        padding: 32px 0;
+    }
+    p {
+        font-size: 16px;
+    }
+    #left {
+        margin-right: 5em;
+    }
+    #left, #right {
+        width: 150px;
+    }
+}
+@media screen and (max-height: 350px) {
+    #left, #right {
+        width: 120px;
     }
 }
