--- a/css/3-3.css
+++ b/css/3-3.css
@@ -21,15 +21,26 @@
     overflow-y: hidden;
 }
 .textContainer {
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
     text-align: center;
     padding-top: 7em;
     padding-bottom: 4em;
     margin-bottom: 2em;
 }
+.wrapper {
+    text-align: center;
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 70%, rgba(255, 255, 255, 0) 100%);
+}
 p {
     color: #FFFFFF;
     font-size: 22px;
     margin: 0;
+}
+#upText, #middleText {
+    margin-top: 20px;
 }
 #upText {
     white-space: pre-wrap;
@@ -38,8 +49,12 @@ p {
 #upText:before {
     content: "＿＿    ";
 }
+#upText, #middleText {
+    display: inline-block;
+}
 #bottomText {
     white-space: pre;
+    margin-bottom: 20px;
 }
 #bottomText:after {
     content: "                     "
@@ -60,29 +75,109 @@ p {
     width: 220px;
     cursor: pointer;
 }
-@media (max-width: 565px) {
+@media screen and (max-width: 565px) {
     .textContainer {
-        padding: 72px 64px 0;
+        padding: 72px 10px 0;
     }
     p {
         font-size: 18px;
     }
     #upText {
-
+        margin-bottom: 7px;
+        display: inherit;
+    }
+    #upText:after {
+        content: "                      "
+    }
+    #middleText, #bottomText {
+        display: inline-block;
+        margin-top: 0;
+        margin-bottom: 20px;
     }
     #bottomText {
         white-space: normal;
     }
-    #topLeft, #topRight {
+    #topLeft {
+        width: 180px;
+        margin-top: 1em;
+    }
+    #topRight, #bottomLeft, #bottomRight {
+        width: 180px;
         margin-top: 2em;
     }
-    #bottomLeft, #bottomRight {
-        margin-top: 2em;
+    #topLeft, #bottomLeft {
+        margin-right: 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .textContainer {
+        padding: 40px 10px 0;
+        margin-bottom: 24px;
+    }
+    p {
+        font-size: 14px;
+    }
+    #upText {
+        margin-bottom: 3px;
+    }
+    #topLeft, #topRight, #bottomLeft, #bottomRight {
+        width: 160px;
+    }
+}
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+    .textContainer {
+        padding: 80px 10px 0;
+    }
+    p {
+        font-size: 20px;
+    }
+    #topLeft, #topRight, #bottomLeft, #bottomRight {
+        width: 220px;
+        margin-top: 35px;
+    }
+}
+@media screen and (max-height: 420px) {
+    .textContainer {
+        padding: 56px 0 30px;
+        margin: 0;
+    }
+    p {
+        font-size: 18px;
+    }
+    #topLeft, #bottomLeft {
+        margin-right: 2em;
     }
     #topLeft, #topRight, #bottomLeft, #bottomRight {
         width: 180px;
     }
+}
+@media screen and (max-height: 380px) {
+    .textContainer {
+        padding: 50px 0 30px;
+        margin: 0;
+    }
+    p {
+        font-size: 16px;
+    }
     #topLeft, #bottomLeft {
-        margin-right: 0;
+        margin-right: 2em;
+    }
+    #topLeft, #topRight, #bottomLeft, #bottomRight {
+        width: 160px;
+    }
+}
+@media screen and (max-height: 350px) {
+    .textContainer {
+        padding: 25px 0;
+        margin: 0;
+    }
+    p {
+        font-size: 16px;
+    }
+    #topLeft, #bottomLeft {
+        margin-right: 2em;
+    }
+    #topLeft, #topRight, #bottomLeft, #bottomRight {
+        width: 150px;
     }
 }
