--- a/css/3-4.css
+++ b/css/3-4.css
@@ -1,6 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 * {
     font-family: "Noto Sans TC";
+    font-weight: 400;
 }
 body {
     height: 100vh;
@@ -17,23 +18,28 @@ body {
     justify-content: center;
     align-items: center;
     padding-top: 7em;
-    padding-bottom: 6em;
+    padding-bottom: 4em;
     margin-bottom: 2em;
 }
 .wrapper {
     text-align: center;
-    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);}
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
+}
 p {
     color: #FFFFFF;
-    font-size: 24px;
-    margin: 20px;
+    font-size: 22px;
+    margin: 0;
 }
 #upText {
     white-space: pre;
     margin-bottom: 10px;
+    margin-top: 20px;
 }
 #upText:before {
     content: "＿＿    ";
+}
+#bottomText {
+    margin-bottom: 20px;
 }
 .options {
     text-align: center;
@@ -48,9 +54,9 @@ p {
     width: 250px;
     cursor: pointer;
 }
-@media (max-width: 576px) {
+@media screen and (max-width: 565px) {
     .textContainer {
-        padding: 72px 64px 0;
+        padding: 72px 10px 0;
         margin-bottom: 9em;
     }
     p {
@@ -63,5 +69,63 @@ p {
     }
     #left, #right {
         width: 200px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .textContainer {
+        padding: 40px 10px 0;
+        margin-bottom: 7em;
+    }
+    p {
+        font-size: 14px;
+    }
+    #upText {
+        margin-bottom: 3px;
+    }
+    #bottomText {
+        margin-top: 0;
+    }
+    #left, #right {
+        width: 160px;
+    }
+}
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+    .textContainer {
+        padding: 80px 10px 24px;
+    }
+    p {
+        font-size: 20px;
+    }
+    #left {
+        margin: 0 0 50px;
+    }
+    #left, #right {
+        width: 200px;
+    }
+}
+@media screen and (max-height: 420px) {
+    .textContainer {
+        padding: 56px 0;
+        margin-bottom: 0;
+    }
+    p {
+        font-size: 18px;
+    }
+    #left {
+        margin-right: 3em;
+    }
+    #left, #right {
+        width: 180px;
+    }
+}
+@media screen and (max-height: 340px) {
+    .textContainer {
+        padding: 35px 0 3em;
+    }
+    p {
+        font-size: 16px;
+    }
+    #left, #right {
+        width: 150px;
     }
 }
