--- a/css/4-1.css
+++ b/css/4-1.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
     background-image: url("../assets/SoundThree/background.png");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left;
     background-size: cover;
     overflow-y: hidden;
 }
@@ -57,7 +57,12 @@ p {
     width: 300px;
     cursor: pointer;
 }
-@media (max-width: 565px) {
+@media screen and (max-width: 820px) {
+    #left {
+        margin-right: 5em;
+    }
+}
+@media screen and (max-width: 565px) {
     .textContainer {
         padding: 72px 32px 0;
     }
@@ -84,6 +89,62 @@ p {
         margin-bottom: 15px;
     }
     #left, #right {
-        width: 250px;
+        width: 240px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .textContainer {
+        padding: 40px 32px 0;
+    }
+    p {
+        font-size: 14px;
+    }
+    #upText, #middleTextOne, #middleTextTwo {
+        margin-bottom: 3px;
+    }
+    #left, #right {
+        width: 200px;
+    }
+}
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+    .textContainer {
+        padding: 80px 32px 24px;
+    }
+    p {
+        font-size: 20px;
+    }
+    #left {
+        margin-bottom: 20px;
+    }
+    #left, #right {
+        width: 280px;
+    }
+}
+@media screen and (max-height: 420px) {
+    .textContainer {
+        padding: 56px 0 10px;
+    }
+    p {
+        font-size: 18px;
+    }
+    #left {
+        margin-right: 3em;
+    }
+    #left, #right {
+        width: 200px;
+    }
+}
+@media screen and (max-height: 350px) {
+    .textContainer {
+        padding: 32px 0 10px;
+    }
+    p {
+        font-size: 16px;
+    }
+    #left {
+        margin-right: 2em;
+    }
+    #left, #right {
+        width: 180px;
     }
 }
