--- a/css/end.css
+++ b/css/end.css
@@ -25,11 +25,33 @@ p {
 	-webkit-animation: blur 10s ease-out alternate;
     animation-fill-mode: forwards;
 }
+@media screen and (max-width: 820px) {
+    p {
+        font-size: 26px;
+    }
+}
 @media screen and (max-width: 565px) {
     p {
         font-size: 18px;
     }
 }
+@media screen and (max-width: 320px) {
+    p {
+        font-size: 16px;
+    }
+}
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+    p {
+        font-size: 20px;
+    }
+}
+@media screen and (max-height: 420px) {
+    p {
+        font-size: 18px;
+    }
+}
+
+
 @keyframes blur {
 	0%      {text-shadow: 0 0 100px #7D7D7D; opacity: 0;}
 	10%	    {text-shadow: 0 0 90px #7D7D7D;}
