--- a/css/slip.css
+++ b/css/slip.css
@@ -33,9 +33,14 @@ p {
     content: "＿＿    "
 }
 .bottomText:after {
-    content: "                                                     ";
+    content: "                                                      ";
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
+    p {
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 750px) {
     p {
         font-size: 20px;
         white-space: normal;
@@ -59,6 +64,8 @@ p {
         content: "";
     }
 }
+
+
 @keyframes blur {
 	0%      {text-shadow: 0 0 100px #7D7D7D; opacity: 0;}
 	10%	    {text-shadow: 0 0 90px #7D7D7D;}
