--- a/css/start.css
+++ b/css/start.css
@@ -9,7 +9,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 #plancovary {
     width: 250px;
@@ -29,7 +29,6 @@ p {
     margin-top: 1em;
     cursor: pointer;
 }
-
 @media screen and (max-width: 565px) {
     .plancovary {
         text-align: center;
@@ -37,6 +36,7 @@ p {
     }
     #plancovary {
         width: 200px;
+        margin: 0;
     }
     p {
         font-size: 18px;
@@ -57,6 +57,7 @@ p {
     }
     #plancovary {
         width: 180px;
+        margin: 0;
     }
     p {
         font-size: 16px;
@@ -70,6 +71,20 @@ p {
         margin-top: 4em;
     }
 }
+@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 750px) {
+    #plancovary {
+        width: 250px;
+        margin-top: 3em;
+        margin-bottom: 3em;
+    }
+    p {
+        font-size: 20px;
+    }
+    #start {
+        width: 220px;
+        margin-top: 7em;
+    }
+}
 @media screen and (max-height: 420px) {
     #plancovary {
         width: 160px;
@@ -79,6 +94,18 @@ p {
     }
     #start {
         width: 220px;
+        margin-top: 1em;
+    }
+}
+@media screen and (max-height: 350px) {
+    #plancovary {
+        width: 140px;
+    }
+    p {
+        font-size: 16px;
+    }
+    #start {
+        width: 200px;
         margin-top: 1em;
     }
 }
