--- a/css/weakness.css
+++ b/css/weakness.css
@@ -7,8 +7,13 @@ body {
     background-color: #0A0808;
     overflow-y: hidden;
 }
-@media (max-width: 820px) {
+@media screen and (max-width: 820px) {
     body {
         background-image: url("../assets/Weakness/backgroundMobile.jpg");
+    }
+}
+@media screen and (max-height: 565px) {
+    body {
+        background-image: url("../assets/Weakness/background.jpg");
     }
 }
